--- a/.github/workflows/ci_macos.yaml
+++ b/.github/workflows/ci_macos.yaml
@@ -130,8 +130,12 @@ jobs:
           mkdir upload/cmake/libtorrent
           cp libtorrent/build/compile_commands.json upload/cmake/libtorrent
 
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v3
+      - name: upload artifact as zip
+        uses: actions/upload-artifact@v2
         with:
-          name: build-info_macOS_${{ matrix.qbt_gui }}_libtorrent-${{ matrix.libt_version }}_Qt-${{ matrix.qt_version }}
-          path: upload
+            name: qBittorrent-CI_macOS_${{ matrix.qbt_gui }}
+            path: |
+                build/compile_commands.json
+                build/target_graph.dot
+                build/qbittorrent.app
+                build/qbittorrent-nox.app
