--- a/.github/workflows/ci_macos.yaml
+++ b/.github/workflows/ci_macos.yaml
@@ -19,7 +19,6 @@ jobs:
       matrix:
         libt_version: ["2.0.8"]
         qbt_gui: ["GUI=OFF"]
-        qt_version: ["6.4.0"]
         exclude:
           - libt_version: "2.0.8"
             qt_version: "6.4.0"
@@ -60,7 +59,7 @@ jobs:
       - name: Install Qt
         uses: jurplel/install-qt-action@v3
         with:
-          version: ${{ matrix.qt_version }}
+          version:  6.4.0
           archives: qtbase qtdeclarative qtsvg qttools
           # Not sure why Qt made a hard dependency on qtdeclarative, try removing it when Qt > 6.4.0
 
@@ -85,7 +84,6 @@ jobs:
           sudo cmake --install build
 
       - name: Build qBittorrent (Qt6)
-        if: ${{ startsWith(matrix.qt_version, 6) }}
         run: |
           CXXFLAGS="$CXXFLAGS -Wno-gnu-zero-variadic-macro-arguments -Werror -Wno-error=deprecated-declarations" \
           LDFLAGS="$LDFLAGS -gz" \
