--- a/.github/workflows/ci_macos.yaml
+++ b/.github/workflows/ci_macos.yaml
@@ -83,7 +83,8 @@ jobs:
                     -D CMAKE_CXX_STANDARD=17 -D CMAKE_CXX_EXTENSIONS=OFF \
                     -D CMAKE_CXX_VISIBILITY_PRESET=hidden -D CMAKE_VISIBILITY_INLINES_HIDDEN=ON \
                     -D CMAKE_OSX_ARCHITECTURES=arm64 \
-                    -D CMAKE_BUILD_TYPE=Release
+                    -D CMAKE_BUILD_TYPE=Release \
+                    -DQT6=ON \
                     -DGUI=OFF
                   cmake --build build-qbittorrent -j$(sysctl -n hw.ncpu)
 
